--- a/QuizWebAPI/appsettings.json
+++ b/QuizWebAPI/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "QuizDB": "Data Source=PRIYANKA;Initial Catalog=QuizDb;Integrated Security=True"
+    "QuizDB": "Data Source=PRIYANKA;Initial Catalog=ExamDb;Integrated Security=True"
   },
   "AllowedHosts": "*"
 }
