--- a/QuizWebAPI/appsettings.json
+++ b/QuizWebAPI/appsettings.json
@@ -7,7 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    "QuizDB": "Data Source=PRIYANKA;Initial Catalog=ExamDb;Integrated Security=True"
+    "QuizDB": "Data Source=DESKTOP-VE987TB;Initial Catalog=QuizDb;Integrated Security=True"
+    //"QuizDB": "Data Source=sql5053.site4now.net;Initial Catalog=DB_A6BEA6_QuizDb;User ID=DB_A6BEA6_QuizDb_admin;Password=priyanka123"
   },
   "AllowedHosts": "*"
 }
